--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>London Trip</title>
 </head>
 <body>
+    <!-- inizio header -->
+    <header>
+
+    </header>
+    <!-- fine header -->
+
+    <!-- inizio body -->
+    <body>
+        
+    </body>
+    <!-- fine body -->
+
+    <!-- inizio footer -->
+    <footer>
+
+    </footer>
+    <!-- fine footer -->
     
 </body>
 </html>
