--- a/index.html
+++ b/index.html
@@ -19,7 +19,60 @@
 
     <!-- inizio body -->
     <body>
-        
+        <!-- Sezione corpo "Le mie spese" -->
+        <section>
+            <h2>Le mie spese</h2>
+            <!-- inizio tabella spese -->
+            <table>
+                <!-- intestazione tabella -->
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <!-- intestazione tabella -->
+
+                <!-- corpo della tabella -->
+                <tbody>
+                    <!-- riga uno -->
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+
+                    <!-- riga due -->
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+
+                    <!-- riga tre -->
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                </tbody>
+                <!-- corpo della tabella -->
+
+                <!-- chiusura della tabella -->
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360&euro;</td>
+                    </tr>
+                </tfoot>
+                <!-- chiusura della tabella -->
+            </table>
+            <!-- fine tabella spese -->
+        </section>
+
+        <hr>
     </body>
     <!-- fine body -->
 
