--- a/index.html
+++ b/index.html
@@ -71,7 +71,17 @@
             </table>
             <!-- fine tabella spese -->
         </section>
-
+        <hr>
+        <!-- Sezione corpo "Cose da fare" -->
+        <section>
+            <h3>Cosa da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &#10007;</li>
+                <li>Visitare greenwich &#10003;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
+                <li>Mangiare il tipico Fish and Chips inglese  &#10007;</li>
+            </ul>
+        </section>
         <hr>
     </body>
     <!-- fine body -->
